Parcial04 - Add member update pesistance
